--- a/index.html
+++ b/index.html
@@ -31,4 +31,26 @@
       </div>
     </div>
   </div>
+
+  <div class="content">
+    <h1>Some Random Information</h1>
+    <div class="rounded-images">
+      <div class="imgandt">
+        <img src="" alt="1">
+        <p>text1</p>
+      </div>
+      <div class="imgandt">
+        <img src="" alt="2">
+        <p>text1</p>
+      </div>
+      <div class="imgandt">
+        <img src="" alt="3">
+        <p>text1</p>
+      </div>
+      <div class="imgandt">
+        <img src="" alt="4">
+        <p>text1</p>
+      </div>
+    </div>
+  </div>
 </html>
