Complete html footer

--- a/index.html
+++ b/index.html
@@ -53,4 +53,21 @@
       </div>
     </div>
   </div>
+
+  <div class="quote">
+    <div>abc</div>
+    <div class="quote-author">bro</div>
+  </div>
+
+  <div class="top-footer">
+    <div class="top-footer-text">
+      <h3>sometext</h3>
+      <p>basetext</p>
+    </div>
+    <button>SignUp</button>
+  </div>
+
+  <div class="footer">
+    Copyright &copy &#169 The Odin Project 2021
+  </div>
 </html>
