Style Header Complete

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <button>SignUp</button>
       </div>
       <div class="header-image">
-        <img src="" alt="IMAGE-LASAGNA">
+        <img id="image1" src="https://images.pexels.com/photos/214165/pexels-photo-214165.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="MINT">
       </div>
     </div>
   </div>
 
   <div class="content">
-    <h1>Some Random Information</h1>
+    <h1 id="content-head">Some Random Information</h1>
     <div class="rounded-images">
       <div class="imgandt">
         <img src="" alt="1">
