Style, Finish Quote

--- a/index.html
+++ b/index.html
@@ -100,8 +100,14 @@
   </div>
 
   <div class="quote">
-    <div>abc</div>
-    <div class="quote-author">bro</div>
+    <div class="quote-text">
+      Hey, you want a mint bro?
+      <br>
+      naah fam.
+      <br>
+      Bro, seriously take some mints and do us a favour.
+    </div>
+    <div class="quote-author">- Some Random Dude</div>
   </div>
 
   <div class="top-footer">
