Style Upper Footer

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
       <h3>sometext</h3>
       <p>basetext</p>
     </div>
-    <button>SignUp</button>
+    <div>
+      <button id="footer-button">SignUp</button>
+    </div>
   </div>
 
   <div class="footer">
