--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
   </div>
 
   <div class="footer">
-    Copyright &copy &#169 The Odin Project 2021
+    Copyright &copy <!--&#169--> The Odin Project 2021
   </div>
 </html>
