Style header img

--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 </body>
   <div class="header">
     <div class="top-header">
-      <div class="header-logo">Header Logo</div>
-      <div class="link">Header Link-One</div>
-      <div class="link">Header Link-Two</div>
-      <div class="link">Header Link-Three</div>
+      <div class="header-logo">FrenzyMints</div>
+      <div class="link">Home</div>
+      <div class="link">Login</div>
+      <div class="link">SignUp</div>
     </div>
     <div class="content-header">
       <div class="content-header-text">
-        <h1>This website is Awesome</h1>
+        <h1>Mint Family: Types of mint</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Quidem officia, sint beatae repudiandae accusantium, sapiente,
-          saepe mollitia temporibus voluptates deserunt animi hic at numquam
-          rerum quaerat optio error provident illo?
+          Mint is an absolute classic in the herb bed.
+           We present the best and most aromatic types of mint
+           and show what makes them different from each other.
         </p>
         <button>SignUp</button>
       </div>
       <div class="header-image">
-        <img id="image1" src="https://images.pexels.com/photos/214165/pexels-photo-214165.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="MINT">
+        <img id="image1" src="images/pexels-photo-214165.jpeg" alt="MINT">
         <figcaption class="figcaption">Photo: icon0.com/ pexels.com</figcaption>
       </div>
     </div>
@@ -43,7 +42,7 @@
       <div class="imgandt">
         <img class="c-img" src="images/1peppermint-flowers.jpg" alt="PepperMint">
         <figcaption class="figcaption">Photo: Iva Villi/ Shutterstock.com</figcaption>
-        <p>PepperMint Flowers</p>
+        <p>Peppermint</p>
       </div>
       <div class="imgandt">
         <img class="c-img" src="images/2spearmint-leaves.jpg" alt="SpearMint">
@@ -53,7 +52,7 @@
       <div class="imgandt">
         <img class="c-img" src="images/3watermint-pond-1024x683.jpg" alt="WaterMint">
         <figcaption class="figcaption">Photo: Victoria Tucholka/ Shutterstock.com</figcaption>
-        <p>WaterMint</p>
+        <p>Water mint</p>
       </div>
       <div class="imgandt">
         <img class="c-img" src="images/4corsican-mint-1024x683.jpg" alt="Corsican mint">
@@ -126,8 +125,8 @@
 
   <div class="top-footer">
     <div class="top-footer-text">
-      <h3>sometext</h3>
-      <p>basetext</p>
+      <h3>Subscribe to MintDaily</h3>
+      <p>Recieve News and Tips on Herb Weekly</p>
     </div>
     <div>
       <button id="footer-button">SignUp</button>
