--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="content-header">
       <div class="content-header-text">
-        <h1>Mint Family: Types of mint</h1>
+        <h1>Mint Family</h1>
         <p>
           Mint is an absolute classic in the herb bed.
            We present the best and most aromatic types of mint
@@ -37,7 +37,7 @@
   </div>
 
   <div class="content">
-    <h1 id="c-head">Some Random Information</h1>
+    <h1 id="c-head">Mint: Types</h1>
     <div class="rounded-images">
       <div class="imgandt">
         <img class="c-img" src="images/1peppermint-flowers.jpg" alt="PepperMint">
