Fix Header Alignment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   
 </body>
+  <div class="header-container">
   <div class="header">
     <div class="top-header">
       <div class="header-logo">FrenzyMints</div>
@@ -34,6 +35,7 @@
         <figcaption class="figcaption">Photo: icon0.com/ pexels.com</figcaption>
       </div>
     </div>
+  </div>
   </div>
 
   <div class="content">
