Add <pre> than p,br

--- a/index.html
+++ b/index.html
@@ -115,13 +115,11 @@
   </div>
 
   <div class="quote">
-    <div class="quote-text">
+    <pre class="quote-text">
       Hey, you want a mint bro?
-      <br>
       naah fam.
-      <br>
       Bro, seriously take some mints and do us a favour.
-    </div>
+    </pre>
     <div class="quote-author">- Some Random Dude</div>
   </div>
 
